MTX-334 MTX-356
Develop OSCommand Criterion Execution
Resolve embedded files in the Connector objects